# learnfast

./: .env.example  .gitignore  DEVELOPMENT_GUIDE.md  PROJECT_STATUS.md  config.py  diagnose.py  launch.bat  launch.ps1  pyproject.toml  requirements.txt  run_dashboard.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
data/: prealgebra.db
data/curriculum/: 4th_grade_math.yaml  algebra1.yaml  algebra2.yaml  calculus_ab.yaml  calculus_bc.yaml  geometry.yaml  prealgebra.yaml  precalculus.yaml
src/: __init__.py  config.py  main.py
src/adaptive/: __init__.py  assignment_controller.py  learning_state.py.tmp.533.1771337709033  pacing.py
src/content/: __init__.py  curriculum.py  curriculum_loader.py  generator.py
src/database/: __init__.py  db.py  db.py.tmp.533.1771339123983  models.py  models.py.tmp.533.1771337127067
src/grading/: __init__.py  feedback.py  grader.py  qr_scanner.py  scanner.py
src/pdf/: __init__.py  generator.py
src/web/: __init__.py  dashboard.py
tests/: __init__.py
